Add channel priority support and improve configuration; update .gitignore