@@ -4,7 +4,6 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -13,10 +12,12 @@ import lombok.Getter;
 
 import dev.rono.proxychat.common.channel.ChatChannel;
 import dev.rono.proxychat.common.channel.ChatChannelService;
+import dev.rono.proxychat.common.config.PlayerPreferencesStore;
 import dev.rono.proxychat.common.config.ProxyChatConfig;
 import dev.rono.proxychat.common.config.ProxyChatYaml;
 import dev.rono.proxychat.common.platform.ProxyChatBootstrap;
 import dev.rono.proxychat.common.platform.ProxyChatPlatform;
+import dev.rono.proxychat.common.platform.ProxyPlayer;
 import dev.rono.proxychat.common.platform.SignedChatHandler;
 
 public final class ProxyChatCore implements ProxyChatBootstrap {
@@ -25,9 +26,12 @@ public final class ProxyChatCore implements ProxyChatBootstrap {
     private final SignedChatHandler signedChatHandler;
     private final Path dataDirectory;
     private final ProxyChatConfig configManager;
+    private final PlayerPreferencesStore playerPreferences;
     @Getter
     private final ChatChannelService channelService = new ChatChannelService(this);
     private final List<ChatChannel> channels = new ArrayList<>();
+    @Getter
+    private volatile boolean enabled;
 
     public ProxyChatCore(
             Logger logger,
@@ -40,9 +44,10 @@ public final class ProxyChatCore implements ProxyChatBootstrap {
         this.signedChatHandler = signedChatHandler;
         this.dataDirectory = dataDirectory;
         this.configManager = new ProxyChatConfig(logger, dataDirectory);
+        this.playerPreferences = new PlayerPreferencesStore(logger, dataDirectory);
     }
 
-    public void enable(InputStream defaultConfig, InputStream defaultChannel) {
+    public boolean enable(InputStream defaultConfig, InputStream defaultChannel) {
         try {
             if (!Files.exists(dataDirectory)) {
                 Files.createDirectories(dataDirectory);
@@ -50,21 +55,35 @@ public final class ProxyChatCore implements ProxyChatBootstrap {
 
             configManager.ensureChatsDirectory();
             configManager.initialize(defaultConfig, defaultChannel);
-
+            loadPlayerPreferences();
             reloadChannels();
 
+            enabled = true;
+            return true;
+
         } catch (Exception exception) {
+            enabled = false;
             logger.log(Level.SEVERE, "Failed to enable ProxyChat", exception);
+            return false;
         }
     }
 
-    public void reload() {
+    public boolean reload() {
         try {
             configManager.reload();
+            loadPlayerPreferences();
             reloadChannels();
+            return true;
 
         } catch (Exception exception) {
             logger.log(Level.SEVERE, "Failed to reload ProxyChat", exception);
+            return false;
+        }
+    }
+
+    private void loadPlayerPreferences() {
+        if (isPlayerPreferencesPersisted()) {
+            playerPreferences.load();
         }
     }
 
@@ -76,6 +95,36 @@ public final class ProxyChatCore implements ProxyChatBootstrap {
         }
 
         logger.info(channels.size() + " chat channels loaded.");
+    }
+
+    public void onPlayerJoin(ProxyPlayer player) {
+        if (isPlayerPreferencesPersisted()) {
+            playerPreferences.applyToChannels(player.getUniqueId(), channels);
+        }
+    }
+
+    public void onPlayerQuit(ProxyPlayer player) {
+        playerPreferences.clearRuntimeState(player.getUniqueId(), channels);
+    }
+
+    @Override
+    public void onToggleChanged(ProxyPlayer player, ChatChannel channel, boolean toggled) {
+        if (isPlayerPreferencesPersisted()) {
+            playerPreferences.recordToggle(player.getUniqueId(), channel.getCommandName(), toggled);
+        }
+    }
+
+    @Override
+    public void onIgnoreChanged(ProxyPlayer player, ChatChannel channel, boolean ignored) {
+        if (isPlayerPreferencesPersisted()) {
+            playerPreferences.recordIgnore(player.getUniqueId(), channel.getCommandName(), ignored);
+        }
+    }
+
+    @Override
+    public boolean isPlayerPreferencesPersisted() {
+        var config = configManager.getConfig();
+        return config != null && config.getBoolean("persist-player-preferences");
     }
 
     @Override
@@ -95,6 +144,6 @@ public final class ProxyChatCore implements ProxyChatBootstrap {
 
     @Override
     public List<ChatChannel> getChannels() {
-        return Collections.unmodifiableList(channels);
+        return List.copyOf(channels);
     }
 }
